# Python

./: .gitignore  complex_app.py  concepts3.py  math_utils.py  test_requests.py
Python_Django/inkwell_project/: db.sqlite3  requirements.txt
Python_Django/inkwell_project/blog/: filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
Python_Django/inkwell_project/blog/migrations/: 0001_initial.py
Python_Django/inkwell_project/config/: settings.py  urls.py  views.py
Python_Django/inkwell_project/users/: serializers.py  urls.py  views.py
fastapi_student_app/: main.py  models.py  storage.py  students.json
fastapi_todo_mongo/: .env  auth.py  crud.py  database.py  main.py  models.py  requirements.txt
practice/: Decorator.py  app.py  concepts.py  concepts2.py  context_manager.py  generator.py  hello.py  lamda_fstring_error.py  testfile.txt
todo_frontend/: package-lock.json  package.json
todo_frontend/src/: App.jsx  api.js
todo_frontend/src/components/: Loader.jsx  Navbar.jsx  ProtectedRoute.jsx
todo_frontend/src/context/: AuthContext.jsx  TodoContext.jsx
todo_frontend/src/pages/: Login.jsx  Register.jsx  TodoList.jsx
uv_fastapi/: main.py  pyproject.toml  requirements.txt
uv_fastapi/config/: database.py
uv_fastapi/controller/: todo_controller.py  user_controller.py
uv_fastapi/models/: todo_model.py  user_model.py
uv_fastapi/routes/: todo_routes.py  user_routes.py
uv_fastapi/schemas/: todo_schema.py  user_schema.py
uv_fastapi/utils/: hash.py  jwt_handler.py
uv_use_latest/: main.py  pyproject.toml
